# wickly

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: api.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  styles.rst
examples/: addplot_overlay.py  basic_candle.py  bt_plot.py  chart_types.py  indicator_menu.py  live_chart.py  subpanels.py
src/wickly/: __init__.py  _indicator_dialog.py  _utils.py  addplot.py  chart_widget.py  plotting.py  styles.py
src/wickly/bt/: __init__.py  _indicator_registry.py  chart_widget.py  plotting.py
src/wickly/indicators/: __init__.py  _builtins.py  _registry.py
tests/: conftest.py  test_addplot.py  test_aggregation.py  test_bt_plotting.py  test_indicators.py  test_panels.py  test_plotting.py  test_styles.py  test_utils.py
