[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wickly"
version = "0.1.1"
description = "Interactive candlestick chart plotting with PyQt6 — mplfinance-compatible API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "wickly Contributors"},
]
keywords = ["candlestick", "finance", "pyqt6", "interactive", "chart", "ohlc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "PyQt6>=6.4",
    "pandas>=1.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = ["pytest", "build"]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]

[tool.setuptools.packages.find]
where = ["src"]
